<resources>
  <string name="app_name">CleanArchCase</string>
  <string name="action_settings">Settings</string>
  <string name="action_bar_search">search</string>
  <string name="action_bar_add">add</string>
  <string name="action_bar_edit">edit</string>
  <string name="action_bar_share">share</string>
  <string name="action_bar_sort">sort</string>
  <string name="action_bar_sort_size">sortsize</string>
  <string name="action_bar_sort_alpha">sortalpha</string>
</resources>
