<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">
  <item
      android:id="@+id/action_search"
      android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
      android:title="@string/action_bar_search"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="ifRoom|collapseActionView"/>
  <item
      android:id="@+id/action_edit"
      android:icon="@android:drawable/ic_menu_edit"
      android:title="@string/action_bar_edit"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_share"
      android:enabled="false"
      android:icon="@android:drawable/ic_menu_share"
      android:title="@string/action_bar_share"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/action_sort"
      android:icon="@android:drawable/ic_menu_sort_by_size"
      android:title="@string/action_bar_sort"
      app:showAsAction="ifRoom">
    <menu>
      <item
          android:id="@+id/action_sort_size"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:title="@string/action_bar_sort_size"/>
      <item
          android:id="@+id/action_sort_alpha"
          android:icon="@android:drawable/ic_menu_sort_alphabetically"
          android:title="@string/action_bar_sort_alpha"/>
    </menu>
  </item>

</menu>
